refactor:remove webview wait